@@ -2,6 +2,13 @@
  *
  */
 
+2008-09-11 02:33 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * src/wxbase/miscwindows/wx_gridtablebase.cpp
+    ! Fixed SetValue method to properly call the Harbour method one
+
+  * src/wxbase/miscwindows/wxhgridtablebase.prg
+    + added virtual SetValue
+
 2008-09-10 23:09 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * GNUmakefile
   * makefile.gcc
